{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 671,
  "lineage": "f080873a-99a2-cc7d-6d7d-d3868404f12e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c292b454bf164028",
            "domain": "vpc",
            "id": "eipalloc-0c292b454bf164028",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-153-72-203.us-west-1.compute.amazonaws.com",
            "public_ip": "54.153.72.203",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:internet-gateway/igw-074acf35be64b1a24",
            "id": "igw-074acf35be64b1a24",
            "owner_id": "710242627084",
            "tags": {
              "Name": "gogreen_internet_gateway"
            },
            "tags_all": {
              "Name": "gogreen_internet_gateway"
            },
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:710242627084:loadbalancer/app/GoGreenALB/3f0c7e6a3614c7e2",
            "arn_suffix": "app/GoGreenALB/3f0c7e6a3614c7e2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "GoGreenALB-51702921.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:710242627084:loadbalancer/app/GoGreenALB/3f0c7e6a3614c7e2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "GoGreenALB",
            "security_groups": [
              "sg-059f0af765848e4ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0342c519b91c15672"
              },
              {
                "subnet_id": "subnet-08def08b1e5025740"
              }
            ],
            "subnets": [
              "subnet-0342c519b91c15672",
              "subnet-08def08b1e5025740"
            ],
            "tags": {
              "Name": "GoGreenALB"
            },
            "tags_all": {
              "Name": "GoGreenALB"
            },
            "vpc_id": "vpc-0252d45f7ffd3c856",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:710242627084:listener/app/GoGreenALB/3f0c7e6a3614c7e2/f921345726c3f399",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:710242627084:targetgroup/tf-example-lb-tg/ffcadb8a7b93d686",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:710242627084:listener/app/GoGreenALB/3f0c7e6a3614c7e2/f921345726c3f399",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:710242627084:loadbalancer/app/GoGreenALB/3f0c7e6a3614c7e2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.test",
            "aws_security_group.elb-sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:710242627084:targetgroup/tf-example-lb-tg/ffcadb8a7b93d686",
            "arn_suffix": "targetgroup/tf-example-lb-tg/ffcadb8a7b93d686",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:710242627084:targetgroup/tf-example-lb-tg/ffcadb8a7b93d686",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gogreen_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c292b454bf164028",
            "connectivity_type": "public",
            "id": "nat-030cb919dd629f15e",
            "network_interface_id": "eni-0df6c8af481fc9183",
            "private_ip": "10.0.1.49",
            "public_ip": "54.153.72.203",
            "subnet_id": "subnet-08def08b1e5025740",
            "tags": {
              "Name": "gogreen_ng"
            },
            "tags_all": {
              "Name": "gogreen_ng"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_subnet.public1",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ng-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:route-table/rtb-0bdbf7c6d10f18daf",
            "id": "rtb-0bdbf7c6d10f18daf",
            "owner_id": "710242627084",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-030cb919dd629f15e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nat Gateway Route Table"
            },
            "tags_all": {
              "Name": "Nat Gateway Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gogreen_ng",
            "aws_subnet.public1",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:route-table/rtb-0bf8aa87406b4c05e",
            "id": "rtb-0bf8aa87406b4c05e",
            "owner_id": "710242627084",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074acf35be64b1a24",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ngw-rt-as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0820880d16360e44a",
            "route_table_id": "rtb-0bdbf7c6d10f18daf",
            "subnet_id": "subnet-057aa8fee9d84d5a6"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gogreen_ng",
            "aws_route_table.ng-rt",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ngw-rt-as2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008910d5990c146cd",
            "route_table_id": "rtb-0bdbf7c6d10f18daf",
            "subnet_id": "subnet-002bcb1fdbb68cc20"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gogreen_ng",
            "aws_route_table.ng-rt",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub1-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b48925e76aa8cc2",
            "route_table_id": "rtb-0bf8aa87406b4c05e",
            "subnet_id": "subnet-08def08b1e5025740"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public1",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub2-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0097a19d9b4a43c5a",
            "route_table_id": "rtb-0bf8aa87406b4c05e",
            "subnet_id": "subnet-0342c519b91c15672"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public2",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:security-group/sg-01b0fa6871379e067",
            "description": "Allow Access at Port 3306",
            "egress": [],
            "id": "sg-01b0fa6871379e067",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic from the app tier",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "710242627084",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg"
            },
            "tags_all": {
              "Name": "database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:security-group/sg-059f0af765848e4ff",
            "description": "Allow Access to ELB from Anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059f0af765848e4ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-sg",
            "name_prefix": "",
            "owner_id": "710242627084",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb-sg"
            },
            "tags_all": {
              "Name": "elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:security-group/sg-0654f82ce09f34d86",
            "description": "Allow Access at for ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0654f82ce09f34d86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic to the web server from ELB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "710242627084",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-web-sg"
            },
            "tags_all": {
              "Name": "ec2-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:subnet/subnet-057aa8fee9d84d5a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-057aa8fee9d84d5a6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710242627084",
            "tags": {
              "Name": "Private1"
            },
            "tags_all": {
              "Name": "Private1"
            },
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:subnet/subnet-002bcb1fdbb68cc20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-002bcb1fdbb68cc20",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710242627084",
            "tags": {
              "Name": "Private2"
            },
            "tags_all": {
              "Name": "Private2"
            },
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:subnet/subnet-0c127b54fe2bf4ed4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0c127b54fe2bf4ed4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710242627084",
            "tags": {
              "Name": "Private3"
            },
            "tags_all": {
              "Name": "Private3"
            },
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:subnet/subnet-03b2b342d3ba33514",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-03b2b342d3ba33514",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710242627084",
            "tags": {
              "Name": "Private4"
            },
            "tags_all": {
              "Name": "Private4"
            },
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:subnet/subnet-00149c82efe2a1bd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-00149c82efe2a1bd1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710242627084",
            "tags": {
              "Name": "Private5"
            },
            "tags_all": {
              "Name": "Private5"
            },
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:subnet/subnet-078e8ffd81e20ebac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-078e8ffd81e20ebac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710242627084",
            "tags": {
              "Name": "Private6"
            },
            "tags_all": {
              "Name": "Private6"
            },
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:subnet/subnet-08def08b1e5025740",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08def08b1e5025740",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "710242627084",
            "tags": {
              "Name": "Public1"
            },
            "tags_all": {
              "Name": "Public1"
            },
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:subnet/subnet-0342c519b91c15672",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0342c519b91c15672",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "710242627084",
            "tags": {
              "Name": "Public2"
            },
            "tags_all": {
              "Name": "Public2"
            },
            "vpc_id": "vpc-0252d45f7ffd3c856"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:710242627084:vpc/vpc-0252d45f7ffd3c856",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-040a4590fa67bfe93",
            "default_route_table_id": "rtb-01c03944d32e64efd",
            "default_security_group_id": "sg-091e91ed49165ce26",
            "dhcp_options_id": "dopt-4eb06a28",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0252d45f7ffd3c856",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01c03944d32e64efd",
            "owner_id": "710242627084",
            "tags": {
              "Name": "GoGreen VPC"
            },
            "tags_all": {
              "Name": "GoGreen VPC"
            }
          }
        }
      ]
    }
  ]
}